<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.camera.finder.ui.InstructionFragment" />


    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_title"
                android:textColor="@color/f416ff9"
                android:layout_marginTop="24dp"
                android:layout_marginStart="18dp"
                android:textSize="24dp" />
        </FrameLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/top"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="18dp"
                android:paddingEnd="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:onClick="@{()->vm.click(@drawable/in_night,@string/in_night_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_night" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_night_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_night_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_tv,@string/in_tv_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_tv" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_tv_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_tv_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_pc,@string/in_pc_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_pc" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_pc_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_pc_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_book,@string/in_book_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_book" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_book_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_book_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_road,@string/in_rod_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_road" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_rod_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_rod_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_light,@string/in_light_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_light" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_light_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_light_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_flower,@string/in_flower_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_flower" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_flower_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_flower_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_switch,@string/in_switch_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_switch" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_switch_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_switch_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/f6e7191_16"
                    android:gravity="center_vertical"
                    android:paddingStart="10dp"
                    android:layout_marginTop="20dp"
                    android:onClick="@{()->vm.click(@drawable/in_mir,@string/in_mirror_info_detail)}"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/in_mir" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/in_mirror_tip"
                            android:textColor="@color/white"
                            android:textSize="24dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@string/in_mirror_info"
                            android:textColor="@color/fd3d3d3"
                            android:textSize="13dp" />
                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>