<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.camera.finder.ui.GuideFragment" />


    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">


        <ImageView
            isGone="@{!vm.first}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/guide_first_bg" />


        <ScrollView
            isGone="@{!vm.first}"
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:text="@string/guide_first_tip"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="@string/guide_first_tip1"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="57dp"
                    android:src="@drawable/guide_first_icon" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="89dp"
                    android:backgroundTint="@color/f416ff9"
                    android:onClick="@{()->vm.enter()}"
                    android:paddingTop="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/guide_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="16dp" />
            </LinearLayout>
        </ScrollView>

        <ScrollView
            isGone="@{vm.first}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="75dp"
                    android:src="@drawable/guide_second_top" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="37dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/guide_second_icon" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/guide_second_bottom" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="31dp"
                    android:text="@string/guide_second_tip"
                    android:textColor="@color/white"
                    android:textSize="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="@string/guide_second_tip1"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <com.google.android.material.button.MaterialButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="73dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="89dp"
                    android:backgroundTint="@color/f416ff9"
                    android:onClick="@{()->vm.enter1()}"
                    android:paddingTop="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/guide_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:cornerRadius="16dp" />
            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>